
- Issue #26182: Fix a refleak in code that raises DeprecationWarning.

- Issue #28721: Fix asynchronous generators aclose() and athrow() to
  handle StopAsyncIteration propagation properly.

- Issue #26110: Speed-up method calls: add LOAD_METHOD and CALL_METHOD
  opcodes.

Extension Modules
-----------------

- Issue #29169: Update zlib to 1.2.11.

Library
-------

- bpo-29212: Fix concurrent.futures.thread.ThreadPoolExecutor threads to have
  a non repr() based thread name by default when no thread_name_prefix is
  supplied.  They will now identify themselves as "ThreadPoolExecutor-y_n".

- [Security] bpo-30694: Upgrade expat copy from 2.2.0 to 2.2.1 to get fixes
  of multiple security vulnerabilities including: CVE-2017-9233 (External
  entity infinite loop DoS), CVE-2016-9063 (Integer overflow, re-fix),
  CVE-2016-0718 (Fix regression bugs from 2.2.0's fix to CVE-2016-0718)
  and CVE-2012-0876 (Counter hash flooding with SipHash).
  Note: the CVE-2016-5300 (Use os-specific entropy sources like getrandom)
  doesn't impact Python, since Python already gets entropy from the OS to set
  the expat secret using ``XML_SetHashSalt()``.

- bpo-29755: Fixed the lgettext() family of functions in the gettext module.
  They now always return bytes.

- [Security] bpo-30500: Fix urllib.parse.splithost() to correctly parse
  fragments. For example, ``splithost('//127.0.0.1#@evil.com/')`` now
  correctly returns the ``127.0.0.1`` host, instead of treating ``@evil.com``
  as the host in an authentification (``login@host``).

- bpo-30616: Functional API of enum allows to create empty enums.
  Patched by Dong-hee Na

- bpo-30038: Fix race condition between signal delivery and wakeup file
  descriptor.  Patch by Nathaniel Smith.

- bpo-23894: lib2to3 now recognizes ``rb'...'`` and ``f'...'`` strings.

- [Security] bpo-29591: Update expat copy from 2.1.1 to 2.2.0 to get fixes
  of CVE-2016-0718 and CVE-2016-4472. See
  https://sourceforge.net/p/expat/bugs/537/ for more information.
